# spectral-compressor

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: CPM.cmake
src/: editor.cpp  editor.h  processor.cpp  processor.h  ring.h  utils.cpp  utils.h
src/dsp/: compressor.h  stft.h
